bootstrap this done!!

--- a/mtm6201/bootstrap/conatctus.html
+++ b/mtm6201/bootstrap/conatctus.html
@@ -71,8 +71,11 @@
         
     </main>
     <!-- -------------------footer--------------------------------- -->
-    <footer>
-
+    <footer class="page-footer bg-dark text-center text-lg-start">
+      <div class="text-center p-3" style="background-color: rgba(226, 24, 24, 0.2);">
+        <a class="text-dark">Blackfox Jeans</a>
+          © 2021 Copyright
+      </div>
     </footer>
 </body>
 </html>
