--- a/mtm6201/bootstrap/index.html
+++ b/mtm6201/bootstrap/index.html
@@ -28,51 +28,57 @@
     </nav>
     <!-- ---------------------Main--------------------------------- -->
     <main>
+
+      <!-- Product-1 -->
         <div class="container bootstrap snipets">
-            <h1 class="text-center text-muted">Welcome to our store</h1>
-            <div class="row flow-offset-1">
+            <h1 class="text-center">Welcome to our store</h1>
               <div class="col-xs-6 col-md-4">
-                <div class="product tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p1.jpg" alt="p1"></a>
+                <div class=" p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p1.jpg" alt="p1"></a>
                   <div class="caption">
                     <h4><a href="#skinny-jeans">Skinny jeans</a></h4>
                     <span>$20.99</span>
                   </div>
                 </div>
               </div>
+        <!-- Product-2 -->
               <div class="col-xs-6 col-md-4">
-                <div class="product tumbnail thumbnail-3" class="img-thumbnail"><a href="#"><img class="img-thumbnail" src="./img/p2.jpg" alt="p2"></a>
+                <div class="p tumbnail thumbnail-3" class="img-thumbnail"><a href="#"><img class="img-thumbnail" src="./img/p2.jpg" alt="p2"></a>
                   <div class="caption">
                     <h4><a href="#straight-leg-jeans">Straight-leg jeans</a></h4>
                     <span>$20.99</span>
                   </div>
                 </div>
               </div>
+        <!-- Product-3 -->
               <div class="col-xs-6 col-md-4">
-                <div class="product tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p3.jpg" alt="p3"></a>
+                <div class="p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p3.jpg" alt="p3"></a>
                   <div class="caption">
                     <h4><a href="#bell-bottom">Bell-bottom jeans</a></h4>
                     <span>$20.99</span>
                   </div>
                 </div>
               </div>
+        <!-- Product-4 -->
               <div class="col-xs-6 col-md-4">
-                <div class="product tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p4.jpg" alt="p4"></a>
+                <div class="p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p4.jpg" alt="p4"></a>
                   <div class="caption">
                     <h4><a href="#wide-leg">Wide-leg jeans</a></h4>
                     <span>$20.99</span>
                   </div>
                 </div>
               </div>
+        <!-- Product-5 -->
               <div class="col-xs-6 col-md-4">
-                <div class="product tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p5.jpg" alt="p5"></a>
+                <div class="p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p5.jpg" alt="p5"></a>
                   <div class="caption">
                     <h4><a href="#high-rise jeans">High-rise jeans</a></h4>
                 </span><span>$20.99</span>
                   </div>
                 </div>
               </div>
+        <!-- Product-6 -->
               <div class="col-xs-6 col-md-4">
-                <div class="product tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p6.jpg" alt="p6"></a>
+                <div class=" p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p6.jpg" alt="p6"></a>
                   <div class="caption">
                     <h4><a href="#mid-rise jeans">Mid-rise jeans</a></h4>
                     <span>$20.99</span>
@@ -80,7 +86,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          
     </main>
     <!-- -------------------footer--------------------------------- -->
       <footer class="page-footer bg-dark text-center text-lg-start">
