--- a/mtm6201/bootstrap/index.html
+++ b/mtm6201/bootstrap/index.html
@@ -31,7 +31,7 @@
 
       <!-- Product-1 -->
         <div class="container bootstrap snipets">
-            <h1 class="text-center">Welcome to our store</h1>
+            <h1 class="jumbotron jumbotron-fluid text-center">Welcome to our store</h1>
               <div class="col-xs-6 col-md-4">
                 <div class=" p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p1.jpg" alt="p1"></a>
                   <div class="caption">
@@ -89,7 +89,7 @@
           
     </main>
     <!-- -------------------footer--------------------------------- -->
-      <footer class="page-footer bg-dark text-center text-lg-start">
+      <footer class=" page-footer bg-dark text-center text-lg-start">
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(226, 24, 24, 0.2);">
           <a class="text-dark">Blackfox Jeans</a>
