--- a/mtm6201/bootstrap/conatctus.html
+++ b/mtm6201/bootstrap/conatctus.html
@@ -24,6 +24,7 @@
     </nav>
     <!-- ---------------------Main--------------------------------- -->
     <main>
+      <h1 class="jumbotron jumbotron-fluid text-center">Reach Us</h1>
         <div class="container contact">
             <div class="row">
                 <div class="col-md-3">
