--- a/mtm6201/bootstrap/conatctus.html
+++ b/mtm6201/bootstrap/conatctus.html
@@ -1,82 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <title>bootstrap</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+  </script>
+  <title>bootstrap</title>
 </head>
+
 <body>
-    <!---------------------------- Navigation------------------- -->
-    <nav class="navbar navbar-inverse">
+  <!---------------------------- Navigation------------------- -->
+  <nav class="navbar navbar-inverse">
     <div>
-        <ul class="nav navbar-nav" > 
-            <li><a class="navbar-brand" href="./index.html">Blackfox Jeans</a></li>
-            <li><a class="nav-item" href="./index.html">Home</a></li>
-            <li><a class="active" class="nav-item" href="./conatctus.html">Contact Us</a></li>
-            <li><a class="nav-item"
-                href="https://www.google.com/search?q=mls+trading+gujarat+india&rlz=1C1CHBF_enCA958CA958&biw=2560&bih=1232&sxsrf=ALeKk03vsq1gxafmO_5eelHLO0rdh6NARg%3A1627611983316&ei=T2MDYevFEqyk_QbH56GIDw&oq=mls+trading+gujarat+in&gs_lcp=Cgdnd3Mtd2l6EAMYATIFCCEQoAEyBQghEKABOgcIABBHELADOgQIABBDOgUIABCABDoGCAAQFhAeOgQIIRAVOgcIIRAKEKABSgQIQRgAUP4TWIRFYNdPaAFwAngAgAF7iAHOBpIBAzEuN5gBAKABAcgBCMABAQ&sclient=gws-wiz">Us
-                on Google</a></li>
-        </ul>
+      <ul class="nav navbar-nav">
+        <li><a class="navbar-brand" href="./index.html">Blackfox Jeans</a></li>
+        <li><a class="nav-item" href="./index.html">Home</a></li>
+        <li><a class="active" class="nav-item" href="./conatctus.html">Contact Us</a></li>
+        <li><a class="nav-item"
+            href="https://www.google.com/search?q=mls+trading+gujarat+india&rlz=1C1CHBF_enCA958CA958&biw=2560&bih=1232&sxsrf=ALeKk03vsq1gxafmO_5eelHLO0rdh6NARg%3A1627611983316&ei=T2MDYevFEqyk_QbH56GIDw&oq=mls+trading+gujarat+in&gs_lcp=Cgdnd3Mtd2l6EAMYATIFCCEQoAEyBQghEKABOgcIABBHELADOgQIABBDOgUIABCABDoGCAAQFhAeOgQIIRAVOgcIIRAKEKABSgQIQRgAUP4TWIRFYNdPaAFwAngAgAF7iAHOBpIBAzEuN5gBAKABAcgBCMABAQ&sclient=gws-wiz">Us
+            on Google</a></li>
+      </ul>
     </div>
-    </nav>
-    <!-- ---------------------Main--------------------------------- -->
-    <main>
-      <h1 class="jumbotron jumbotron-fluid text-center">Reach Us</h1>
-        <div class="container contact">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="contact-us-section">
-                        <h3>Contact Us</h3>
-                        <h4>Reach out to us if you have any doubts and feedback!!!!!!!!!!!!!</h4>
-                        <img src="./img/contactimg.jpg" class="img-thumbnail" alt="Contactus">
-                    </div>
-                </div>
-                <div class="col-md-9">
-                    <div class="contact-form">
-                        <div class="form-group">
-                            <label class="control-label col-sm-2" for="lname">Last Name:</label>
-                            <div class="col-sm-10">          
-                              <input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lastname">
-                            </div>
-                          </div>
-                        <div class="form-group">
-                          <label class="control-label col-sm-2" for="fname">First Name:</label>
-                          <div class="col-sm-10">          
-                            <input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="firstname">
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="control-label col-sm-2" for="comment">Comment:</label>
-                          <div class="col-sm-10">
-                            <textarea class="form-control" rows="5" id="comment"></textarea>
-                          </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-sm-2" for="email">Email:</label>
-                            <div class="col-sm-10">
-                              <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
-                            </div>
-                          </div>
-                        <div class="form-group">        
-                          <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-default">Submit</button>
-                          </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+  </nav>
+  <!-- ---------------------Main--------------------------------- -->
+  <main>
+    <h1 class="jumbotron jumbotron-fluid text-center">Reach Us</h1>
+    <div class="container contact">
+      <div class="row">
+        <div class="col-md-3">
+          <div class="contact-us-section">
+            <h3>Contact Us</h3>
+            <h4>Reach out to us if you have any doubts and feedback!!!!!!!!!!!!!</h4>
+            <img src="./img/contactimg.jpg" class="img-thumbnail" alt="Contactus">
+          </div>
         </div>
-        
-    </main>
-    <!-- -------------------footer--------------------------------- -->
-    <footer class="page-footer bg-dark text-center text-lg-start">
-      <div class="text-center p-3" style="background-color: rgba(226, 24, 24, 0.2);">
-        <a class="text-dark">Blackfox Jeans</a>
-          © 2021 Copyright
+        <div class="col-md-9">
+          <div class="contact-form">
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="lname">Last Name:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lastname">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="fname">First Name:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="firstname">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="comment">Comment:</label>
+              <div class="col-sm-10">
+                <textarea class="form-control" rows="5" id="comment"></textarea>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="email">Email:</label>
+              <div class="col-sm-10">
+                <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-default">Submit</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </footer>
+    </div>
+
+  </main>
+  <!-- -------------------footer--------------------------------- -->
+  <footer class="page-footer bg-dark text-center text-lg-start">
+    <div class="text-center p-3" style="background-color: rgba(226, 24, 24, 0.2);">
+      <a class="text-dark">Blackfox Jeans</a>
+      © 2021 Copyright
+    </div>
+  </footer>
 </body>
+
 </html>
