--- a/mtm6201/bootstrap/index.html
+++ b/mtm6201/bootstrap/index.html
@@ -2,101 +2,102 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-    </script>
-    <title>bootstrap</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+  </script>
+  <title>bootstrap</title>
 </head>
 
 <body>
-    <!---------------------------- Navigation------------------- -->
-    <nav class="navbar navbar-inverse">
-        <div>
-            <ul class="nav navbar-nav">
-                <li><a class="navbar-brand" href="#">Blackfox Jeans</a></li>
-                <li><a class="active" class="nav-item" href="./index.html">Home</a></li>
-                <li><a class="nav-item" href="./conatctus.html">Contact Us</a></li>
-                <li><a class="nav-item"
-                        href="https://www.google.com/search?q=mls+trading+gujarat+india&rlz=1C1CHBF_enCA958CA958&biw=2560&bih=1232&sxsrf=ALeKk03vsq1gxafmO_5eelHLO0rdh6NARg%3A1627611983316&ei=T2MDYevFEqyk_QbH56GIDw&oq=mls+trading+gujarat+in&gs_lcp=Cgdnd3Mtd2l6EAMYATIFCCEQoAEyBQghEKABOgcIABBHELADOgQIABBDOgUIABCABDoGCAAQFhAeOgQIIRAVOgcIIRAKEKABSgQIQRgAUP4TWIRFYNdPaAFwAngAgAF7iAHOBpIBAzEuN5gBAKABAcgBCMABAQ&sclient=gws-wiz">Us
-                        on Google</a></li>
-            </ul>
-        </div>
-    </nav>
-    <!-- ---------------------Main--------------------------------- -->
-    <main>
+  <!---------------------------- Navigation------------------- -->
+  <nav class="navbar navbar-inverse">
+    <div>
+      <ul class="nav navbar-nav">
+        <li><a class="navbar-brand" href="#">Blackfox Jeans</a></li>
+        <li><a class="active" class="nav-item" href="./index.html">Home</a></li>
+        <li><a class="nav-item" href="./conatctus.html">Contact Us</a></li>
+        <li><a class="nav-item"
+            href="https://www.google.com/search?q=mls+trading+gujarat+india&rlz=1C1CHBF_enCA958CA958&biw=2560&bih=1232&sxsrf=ALeKk03vsq1gxafmO_5eelHLO0rdh6NARg%3A1627611983316&ei=T2MDYevFEqyk_QbH56GIDw&oq=mls+trading+gujarat+in&gs_lcp=Cgdnd3Mtd2l6EAMYATIFCCEQoAEyBQghEKABOgcIABBHELADOgQIABBDOgUIABCABDoGCAAQFhAeOgQIIRAVOgcIIRAKEKABSgQIQRgAUP4TWIRFYNdPaAFwAngAgAF7iAHOBpIBAzEuN5gBAKABAcgBCMABAQ&sclient=gws-wiz">Us
+            on Google</a></li>
+      </ul>
+    </div>
+  </nav>
+  <!-- ---------------------Main--------------------------------- -->
+  <main>
 
-      <!-- Product-1 -->
-        <div class="container bootstrap snipets">
-            <h1 class="jumbotron jumbotron-fluid text-center">Welcome to our store</h1>
-              <div class="col-xs-6 col-md-4">
-                <div class=" p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p1.jpg" alt="p1"></a>
-                  <div class="caption">
-                    <h4><a href="#skinny-jeans">Skinny jeans</a></h4>
-                    <span>$20.99</span>
-                  </div>
-                </div>
-              </div>
-        <!-- Product-2 -->
-              <div class="col-xs-6 col-md-4">
-                <div class="p tumbnail thumbnail-3" class="img-thumbnail"><a href="#"><img class="img-thumbnail" src="./img/p2.jpg" alt="p2"></a>
-                  <div class="caption">
-                    <h4><a href="#straight-leg-jeans">Straight-leg jeans</a></h4>
-                    <span>$20.99</span>
-                  </div>
-                </div>
-              </div>
-        <!-- Product-3 -->
-              <div class="col-xs-6 col-md-4">
-                <div class="p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p3.jpg" alt="p3"></a>
-                  <div class="caption">
-                    <h4><a href="#bell-bottom">Bell-bottom jeans</a></h4>
-                    <span>$20.99</span>
-                  </div>
-                </div>
-              </div>
-        <!-- Product-4 -->
-              <div class="col-xs-6 col-md-4">
-                <div class="p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p4.jpg" alt="p4"></a>
-                  <div class="caption">
-                    <h4><a href="#wide-leg">Wide-leg jeans</a></h4>
-                    <span>$20.99</span>
-                  </div>
-                </div>
-              </div>
-        <!-- Product-5 -->
-              <div class="col-xs-6 col-md-4">
-                <div class="p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p5.jpg" alt="p5"></a>
-                  <div class="caption">
-                    <h4><a href="#high-rise jeans">High-rise jeans</a></h4>
-                </span><span>$20.99</span>
-                  </div>
-                </div>
-              </div>
-        <!-- Product-6 -->
-              <div class="col-xs-6 col-md-4">
-                <div class=" p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p6.jpg" alt="p6"></a>
-                  <div class="caption">
-                    <h4><a href="#mid-rise jeans">Mid-rise jeans</a></h4>
-                    <span>$20.99</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          
-    </main>
-    <!-- -------------------footer--------------------------------- -->
-      <footer class=" page-footer bg-dark text-center text-lg-start">
-        <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(226, 24, 24, 0.2);">
-          <a class="text-dark">Blackfox Jeans</a>
-            © 2021 Copyright
+    <!-- Product-1 -->
+    <div class="container bootstrap snipets">
+      <h1 class="jumbotron jumbotron-fluid text-center">Welcome to our store</h1>
+      <div class="col-xs-6 col-md-4">
+        <div class=" p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p1.jpg" alt="p1"></a>
+          <div class="caption">
+            <h4><a href="#skinny-jeans">Skinny jeans</a></h4>
+            <span>$20.99</span>
+          </div>
         </div>
-        <!-- Copyright -->
-      </footer>
+      </div>
+      <!-- Product-2 -->
+      <div class="col-xs-6 col-md-4">
+        <div class="p tumbnail thumbnail-3" class="img-thumbnail"><a href="#"><img class="img-thumbnail"
+              src="./img/p2.jpg" alt="p2"></a>
+          <div class="caption">
+            <h4><a href="#straight-leg-jeans">Straight-leg jeans</a></h4>
+            <span>$20.99</span>
+          </div>
+        </div>
+      </div>
+      <!-- Product-3 -->
+      <div class="col-xs-6 col-md-4">
+        <div class="p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p3.jpg" alt="p3"></a>
+          <div class="caption">
+            <h4><a href="#bell-bottom">Bell-bottom jeans</a></h4>
+            <span>$20.99</span>
+          </div>
+        </div>
+      </div>
+      <!-- Product-4 -->
+      <div class="col-xs-6 col-md-4">
+        <div class="p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p4.jpg" alt="p4"></a>
+          <div class="caption">
+            <h4><a href="#wide-leg">Wide-leg jeans</a></h4>
+            <span>$20.99</span>
+          </div>
+        </div>
+      </div>
+      <!-- Product-5 -->
+      <div class="col-xs-6 col-md-4">
+        <div class="p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p5.jpg" alt="p5"></a>
+          <div class="caption">
+            <h4><a href="#high-rise jeans">High-rise jeans</a></h4>
+            </span><span>$20.99</span>
+          </div>
+        </div>
+      </div>
+      <!-- Product-6 -->
+      <div class="col-xs-6 col-md-4">
+        <div class=" p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p6.jpg" alt="p6"></a>
+          <div class="caption">
+            <h4><a href="#mid-rise jeans">Mid-rise jeans</a></h4>
+            <span>$20.99</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </main>
+  <!-- -------------------footer--------------------------------- -->
+  <footer class=" page-footer bg-dark text-center text-lg-start">
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(226, 24, 24, 0.2);">
+      <a class="text-dark">Blackfox Jeans</a>
+      © 2021 Copyright
+    </div>
+    <!-- Copyright -->
+  </footer>
 </body>
 
 </html>
