--- a/mtm6201/bootstrap/index.html
+++ b/mtm6201/bootstrap/index.html
@@ -35,8 +35,8 @@
       <div class="col-xs-6 col-md-4">
         <div class=" p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p1.jpg" alt="p1"></a>
           <div class="caption">
-            <h4><a href="#skinny-jeans">Skinny jeans</a></h4>
-            <span>$20.99</span>
+            <h4 class="text-center"><a href="#skinny-jeans">Skinny jeans</a></h4>
+            <h6 class="text-center">$20.99</h6>
           </div>
         </div>
       </div>
@@ -45,8 +45,8 @@
         <div class="p tumbnail thumbnail-3" class="img-thumbnail"><a href="#"><img class="img-thumbnail"
               src="./img/p2.jpg" alt="p2"></a>
           <div class="caption">
-            <h4><a href="#straight-leg-jeans">Straight-leg jeans</a></h4>
-            <span>$20.99</span>
+            <h4 class="text-center"><a href="#straight-leg-jeans">Straight-leg jeans</a></h4>
+            <h6 class="text-center">$20.99</h6>
           </div>
         </div>
       </div>
@@ -54,8 +54,8 @@
       <div class="col-xs-6 col-md-4">
         <div class="p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p3.jpg" alt="p3"></a>
           <div class="caption">
-            <h4><a href="#bell-bottom">Bell-bottom jeans</a></h4>
-            <span>$20.99</span>
+            <h4 class="text-center"><a href="#bell-bottom">Bell-bottom jeans</a></h4>
+            <h6 class="text-center">$20.99</h6>
           </div>
         </div>
       </div>
@@ -63,8 +63,8 @@
       <div class="col-xs-6 col-md-4">
         <div class="p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p4.jpg" alt="p4"></a>
           <div class="caption">
-            <h4><a href="#wide-leg">Wide-leg jeans</a></h4>
-            <span>$20.99</span>
+            <h4 class="text-center"><a href="#wide-leg">Wide-leg jeans</a></h4>
+            <h6 class="text-center">$20.99</h6>
           </div>
         </div>
       </div>
@@ -72,8 +72,8 @@
       <div class="col-xs-6 col-md-4">
         <div class="p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p5.jpg" alt="p5"></a>
           <div class="caption">
-            <h4><a href="#high-rise jeans">High-rise jeans</a></h4>
-            </span><span>$20.99</span>
+            <h4 class="text-center"><a href="#high-rise jeans">High-rise jeans</a></h4>
+            <h6 class="text-center">$20.99</h6>
           </div>
         </div>
       </div>
@@ -81,8 +81,8 @@
       <div class="col-xs-6 col-md-4">
         <div class=" p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p6.jpg" alt="p6"></a>
           <div class="caption">
-            <h4><a href="#mid-rise jeans">Mid-rise jeans</a></h4>
-            <span>$20.99</span>
+            <h4 class="text-center"><a href="#mid-rise jeans">Mid-rise jeans</a></h4>
+            <h6 class="text-center">$20.99</h6>
           </div>
         </div>
       </div>
