--- a/mtm6201/bootstrap/index.html
+++ b/mtm6201/bootstrap/index.html
@@ -13,12 +13,12 @@
 </head>
 
 <body>
-  <!---------------------------- Navigation------------------- -->
+  <!--Navigation-->
   <nav class="navbar navbar-inverse">
     <div>
       <ul class="nav navbar-nav">
         <li><a class="navbar-brand" href="#">Blackfox Jeans</a></li>
-        <li><a class="active" class="nav-item" href="./index.html">Home</a></li>
+        <li><a class="nav-item" href="./index.html">Home</a></li>
         <li><a class="nav-item" href="./conatctus.html">Contact Us</a></li>
         <li><a class="nav-item"
             href="https://www.google.com/search?q=mls+trading+gujarat+india&rlz=1C1CHBF_enCA958CA958&biw=2560&bih=1232&sxsrf=ALeKk03vsq1gxafmO_5eelHLO0rdh6NARg%3A1627611983316&ei=T2MDYevFEqyk_QbH56GIDw&oq=mls+trading+gujarat+in&gs_lcp=Cgdnd3Mtd2l6EAMYATIFCCEQoAEyBQghEKABOgcIABBHELADOgQIABBDOgUIABCABDoGCAAQFhAeOgQIIRAVOgcIIRAKEKABSgQIQRgAUP4TWIRFYNdPaAFwAngAgAF7iAHOBpIBAzEuN5gBAKABAcgBCMABAQ&sclient=gws-wiz">Us
@@ -26,7 +26,7 @@
       </ul>
     </div>
   </nav>
-  <!-- ---------------------Main--------------------------------- -->
+  <!--Main-->
   <main>
 
     <!-- Product-1 -->
@@ -42,7 +42,7 @@
       </div>
       <!-- Product-2 -->
       <div class="col-xs-6 col-md-4">
-        <div class="p tumbnail thumbnail-3" class="img-thumbnail"><a href="#"><img class="img-thumbnail"
+        <div class="p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail"
               src="./img/p2.jpg" alt="p2"></a>
           <div class="caption">
             <h4 class="text-center"><a href="#straight-leg-jeans">Straight-leg jeans</a></h4>
@@ -72,7 +72,7 @@
       <div class="col-xs-6 col-md-4">
         <div class="p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p5.jpg" alt="p5"></a>
           <div class="caption">
-            <h4 class="text-center"><a href="#high-rise jeans">High-rise jeans</a></h4>
+            <h4 class="text-center"><a href="#high-rise-jeans">High-rise jeans</a></h4>
             <h6 class="text-center">$20.99</h6>
           </div>
         </div>
@@ -81,7 +81,7 @@
       <div class="col-xs-6 col-md-4">
         <div class=" p tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p6.jpg" alt="p6"></a>
           <div class="caption">
-            <h4 class="text-center"><a href="#mid-rise jeans">Mid-rise jeans</a></h4>
+            <h4 class="text-center"><a href="#mid-rise-jeans">Mid-rise jeans</a></h4>
             <h6 class="text-center">$20.99</h6>
           </div>
         </div>
@@ -89,7 +89,7 @@
     </div>
 
   </main>
-  <!-- -------------------footer--------------------------------- -->
+  <!-- footer -->
   <footer class=" page-footer bg-dark text-center text-lg-start">
     <!-- Copyright -->
     <div class="text-center p-7" style="background-color: rgba(226, 24, 24, 0.2);">
