no error in contact file

--- a/mtm6201/bootstrap/conatctus.html
+++ b/mtm6201/bootstrap/conatctus.html
@@ -13,20 +13,20 @@
 </head>
 
 <body>
-  <!---------------------------- Navigation------------------- -->
+  <!--Navigation-->
   <nav class="navbar navbar-inverse">
     <div>
       <ul class="nav navbar-nav">
         <li><a class="navbar-brand" href="./index.html">Blackfox Jeans</a></li>
         <li><a class="nav-item" href="./index.html">Home</a></li>
-        <li><a class="active" class="nav-item" href="./conatctus.html">Contact Us</a></li>
+        <li><a class="nav-item" href="./conatctus.html">Contact Us</a></li>
         <li><a class="nav-item"
             href="https://www.google.com/search?q=mls+trading+gujarat+india&rlz=1C1CHBF_enCA958CA958&biw=2560&bih=1232&sxsrf=ALeKk03vsq1gxafmO_5eelHLO0rdh6NARg%3A1627611983316&ei=T2MDYevFEqyk_QbH56GIDw&oq=mls+trading+gujarat+in&gs_lcp=Cgdnd3Mtd2l6EAMYATIFCCEQoAEyBQghEKABOgcIABBHELADOgQIABBDOgUIABCABDoGCAAQFhAeOgQIIRAVOgcIIRAKEKABSgQIQRgAUP4TWIRFYNdPaAFwAngAgAF7iAHOBpIBAzEuN5gBAKABAcgBCMABAQ&sclient=gws-wiz">Us
             on Google</a></li>
       </ul>
     </div>
   </nav>
-  <!-- ---------------------Main--------------------------------- -->
+  <!--Main -->
   <main>
     <h1 class="jumbotron jumbotron-fluid text-center">Reach Us</h1>
     <div class="container contact">
@@ -75,7 +75,7 @@
     </div>
 
   </main>
-  <!-- -------------------footer--------------------------------- -->
+  <!--footer-->
   <footer class="page-footer bg-dark text-center text-lg-start">
     <div class="text-center p-3" style="background-color: rgba(226, 24, 24, 0.2);">
       <a class="text-dark">Blackfox Jeans</a>
