--- a/index.html
+++ b/index.html
@@ -28,14 +28,45 @@
             <section class="about">
                 <h1>About Me</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ut itaque consectetur vero facilis dolore rerum delectus, eius culpa aspernatur, vitae rem ipsum placeat impedit, neque veniam mollitia ipsam molestias.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores at quisquam harum sunt fugit, aliquid corporis quidem assumenda suscipit, deserunt velit quam explicabo eum tenetur, quo modi ullam eaque veritatis!
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores at quisquam harum sunt fugit, aliquid corporis quidem assumenda suscipit, deserunt velit quam explicabo eum tenetur, quo modi ullam eaque veritatis!
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque facere quis aliquam iste commodi rerum. Ratione molestias earum fugiat quae magni. Iusto vel inventore in accusamus aperiam ipsam sint quae!
                 </p>
             </section>
         </section>
     </main>
     <footer>
-
+    <div class="footer">
+        <div class="container">
+                <h5 class="connectme">Connect With Me</h5>
+                <ul class="social-media">
+                    <li><i class="fab fa-facebook"></i></li>
+                    <li><i class="fab fa-instagram"></i></li>
+                    <li><i class="fab fa-youtube"></i></li>
+                </ul>
+            </div>
+        <div class="container">
+            <ul class="contactme"> 
+                <li><h5>Contact Me!</h5></li>
+                <li>    </li>
+                <li>+1 (647) 770 2364</li>
+                <li>contactme@surajsukhiya.com</li>
+            </ul>
+        </div>
+        <div class="container">
+            <div class="footernav">
+                <ul>
+                    <li><h5>Browse</h5></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="skills.html">My Skills</a></li>
+                    <li><a href="contact.html">Contact Me</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
     </footer>
+    <script src="https://kit.fontawesome.com/776bb17f52.js" crossorigin="anonymous"></script>
+
 </body>
 </html> 
