--- a/contact.html
+++ b/contact.html
@@ -38,5 +38,37 @@
             </form>
         </section>
     </main>
+    <footer>
+        <div class="footer">
+            <div class="container">
+                    <h5 class="connectme">Connect With Me</h5>
+                    <ul class="social-media">
+                        <li><i class="fab fa-facebook"></i></li>
+                        <li><i class="fab fa-instagram"></i></li>
+                        <li><i class="fab fa-youtube"></i></li>
+                    </ul>
+                </div>
+            <div class="container">
+                <ul class="contactme"> 
+                    <li><h5>Contact Me!</h5></li>
+                    <li>    </li>
+                    <li>+1 (647) 770 2364</li>
+                    <li>contactme@surajsukhiya.com</li>
+                </ul>
+            </div>
+            <div class="container">
+                <div class="footernav">
+                    <ul>
+                        <li><h5>Browse</h5></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="skills.html">My Skills</a></li>
+                        <li><a href="contact.html">Contact Me</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        </footer>
+        <script src="https://kit.fontawesome.com/776bb17f52.js" crossorigin="anonymous"></script>
 </body>
 </html>
