--- a/skills.html
+++ b/skills.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>MySkills</title>
 </head>
 <body>
     <header>
         <nav>
             <ul class="nav-list">
-                <li class="nav-item"><img src="img/logo.png" alt="My logo" class="logoimg"></li>
+                <li class="nav-item"><a href="index.html"><img src="/img/logo.png" alt="My logo" class="logoimg"></a></li>
                 <li class="nav-item"><a href="index.html">Home</a></li>
                 <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
                 <li class="nav-item"><a href="skills.html">My Skills</a></li>
