--- a/portfolio.html
+++ b/portfolio.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <header>
         <nav>
             <ul class="nav-list">
-                <li class="nav-item"><img src="img/logo.png" alt="My logo" class="logoimg"></li>
+                <li class="nav-item"><a href="index.html"><img src="/img/logo.png" alt="My logo" class="logoimg"></a></li>
                 <li class="nav-item"><a href="index.html">Home</a></li>
                 <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
                 <li class="nav-item"><a href="skills.html">My Skills</a></li>
@@ -24,16 +24,16 @@
         <div class="container">
             <div class="row mx-3">
                 <div class="port-item col-12 my-5 col-md-6 col-lg-6">
-                    <img src="/img/photoimg.jpg" alt="Photography">
-                    <h2 class="bg-info text-center py-3 text-white bold">Photography</h2>
+                    <a href="./photography.html"><img src="/img/photoimg.jpg" alt="Photography"></a>
+                    <a href="./photography.html"><h2 class="bg-info text-center py-3 text-white bold">Photography</h2></a>
                 </div>
                 <div class="port-item col-12 my-5 col-md-6 col-lg-6">
                     <img src="/img/webdesignimg.jpg" alt="Web Design">
                     <h2 class="bg-info text-center py-3 text-white bold">Web Desgin</h2>
                 </div>
                 <div class="port-item col-12 mb-5 col-md-6 col-lg-6">
-                    <img src="/img/videoimg.jpg" alt="Video Production">
-                    <h2 class="bg-info text-center py-3 text-white bold">Video Production</h2>
+                    <a href="https://www.youtube.com/playlist?list=PLpp9tI-2m9Vq7aoZW2TyCbv3nl135D1Ah"><img src="/img/videoimg.jpg" alt="Video Production"></a>
+                    <a href="https://www.youtube.com/playlist?list=PLpp9tI-2m9Vq7aoZW2TyCbv3nl135D1Ah"><h2 class="bg-info text-center py-3 text-white bold">Video Production</h2></a>
                 </div>
                 <div class="port-item col-12 mb-5 col-md-6 col-lg-6">
                     <img src="/img/userimg.jpg" alt="UX Design">
