--- a/portfolio.html
+++ b/portfolio.html
@@ -28,16 +28,16 @@
                     <a href="./photography.html"><h2 class="bg-info text-center py-3 text-white bold">Photography</h2></a>
                 </div>
                 <div class="port-item col-12 my-5 col-md-6 col-lg-6">
-                    <img src="/img/webdesignimg.jpg" alt="Web Design">
-                    <h2 class="bg-info text-center py-3 text-white bold">Web Desgin</h2>
+                    <a href="./webdesign.html"><img src="/img/webdesignimg.jpg" alt="Web Design"></a>
+                    <a href="./webdesign.html"><h2 class="bg-info text-center py-3 text-white bold">Web Desgin</h2></a>
                 </div>
                 <div class="port-item col-12 mb-5 col-md-6 col-lg-6">
                     <a href="https://www.youtube.com/playlist?list=PLpp9tI-2m9Vq7aoZW2TyCbv3nl135D1Ah"><img src="/img/videoimg.jpg" alt="Video Production"></a>
                     <a href="https://www.youtube.com/playlist?list=PLpp9tI-2m9Vq7aoZW2TyCbv3nl135D1Ah"><h2 class="bg-info text-center py-3 text-white bold">Video Production</h2></a>
                 </div>
                 <div class="port-item col-12 mb-5 col-md-6 col-lg-6">
-                    <img src="/img/userimg.jpg" alt="UX Design">
-                    <h2 class="bg-info text-center py-3 text-white bold">UX Design</h2>
+                    <a href="./uxdesign.html"><img src="/img/userimg.jpg" alt="UX Design"></a>
+                    <a href="./uxdesign.html"><h2 class="bg-info text-center py-3 text-white bold">UX Design</h2></a>
                 </div>
             </div>
         </div>
