--- a/photography.html
+++ b/photography.html
@@ -22,6 +22,18 @@
 </header>
 <main>
     <h1>My Work</h1>
+    <ul class="photosskill">
+        <li><img src="./img/photography/1.jpg" alt="1"></li>
+        <li><img src="./img/photography/2.jpg" alt="1"></li>
+        <li><img src="./img/photography/3.jpg" alt="1"></li>
+        <li><img src="./img/photography/4.jpg" alt="1"></li>
+        <li><img src="./img/photography/5.jpg" alt="1"></li>
+        <li><img src="./img/photography/6.jpg" alt="1"></li>
+        <li><img src="./img/photography/7.jpg" alt="1"></li>
+        <li><img src="./img/photography/8.jpg" alt="1"></li>
+        <li><img src="./img/photography/9.jpg" alt="1"></li>
+    </ul>
+
 </main>
 
 <footer>
