--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    
+
     <title>Portfolio</title>
 </head>
+
 <body>
     <header>
         <nav>
             <ul class="nav-list">
-                <li class="nav-item"><a href="index.html"><img src="/img/logo.png" alt="My logo" class="logoimg"></a></li>
+                <li class="nav-item"><a href="index.html"><img src="/img/logo.png" alt="My logo" class="logoimg"></a>
+                </li>
                 <li class="nav-item"><a href="index.html">Home</a></li>
                 <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
                 <li class="nav-item"><a href="skills.html">My Skills</a></li>
@@ -28,17 +31,31 @@
             </section>
             <section class="about">
                 <h1>About Me</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ut itaque consectetur vero facilis dolore rerum delectus, eius culpa aspernatur, vitae rem ipsum placeat impedit, neque veniam mollitia ipsam molestias.</p>
+                <p>I am also a human name Suraj Sukhiya From West part of India, let me Start from Being Honest I never
+                    wanted
+                    to do studies like every other child but somehow, I was always fascinated about Technology around
+                    me, always
+                    like to try
+                    out tings and do experiments and learn about them so Computers Became my Primary source of
+                    Entertainment and
+                    Focus for rest of my life. Apart from This Since Childhood I Started knowing the things about after
+                    life and
+                    spirituality
+                    which is everything in my life now.</p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores at quisquam harum sunt fugit, aliquid corporis quidem assumenda suscipit, deserunt velit quam explicabo eum tenetur, quo modi ullam eaque veritatis!
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque facere quis aliquam iste commodi rerum. Ratione molestias earum fugiat quae magni. Iusto vel inventore in accusamus aperiam ipsam sint quae!
+                    I am a multimedia designer and videographer. I am learning new skills and gathering the designing
+                    knowledge to help business and personal brands in designing their online presence and create
+                    cinematic videos. And one of my greatest passions is creating cinematic videos specially at events
+                    and I’ve been fortunate to design for some of the local business in Ottawa as a college assignment
+                    and being My high school videographer and photographer for last three years of my schooling.
                 </p>
+                <p class="homeheading"> Check out my work by tapping on portfolio section on Nav Bar </p>
             </section>
         </section>
     </main>
     <footer>
-    <div class="footer">
-        <div class="container">
+        <div class="footer">
+            <div class="container">
                 <h5 class="connectme">Connect With Me</h5>
                 <ul class="social-media">
                     <li><i class="fab fa-facebook"></i></li>
@@ -46,28 +63,33 @@
                     <li><i class="fab fa-youtube"></i></li>
                 </ul>
             </div>
-        <div class="container">
-            <ul class="contactme"> 
-                <li><h5>Contact Me!</h5></li>
-                <li>    </li>
-                <li>+1 (647) 770 2364</li>
-                <li>contactme@surajsukhiya.com</li>
-            </ul>
-        </div>
-        <div class="container">
-            <div class="footernav">
-                <ul>
-                    <li><h5>Browse</h5></li>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="skills.html">My Skills</a></li>
-                    <li><a href="contact.html">Contact Me</a></li>
+            <div class="container">
+                <ul class="contactme">
+                    <li>
+                        <h5>Contact Me!</h5>
+                    </li>
+                    <li> </li>
+                    <li>+1 (647) 770 2364</li>
+                    <li>contactme@surajsukhiya.com</li>
                 </ul>
             </div>
+            <div class="container">
+                <div class="footernav">
+                    <ul>
+                        <li>
+                            <h5>Browse</h5>
+                        </li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="skills.html">My Skills</a></li>
+                        <li><a href="contact.html">Contact Me</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-    </div>
     </footer>
     <script src="https://kit.fontawesome.com/776bb17f52.js" crossorigin="anonymous"></script>
 
 </body>
-</html> 
+
+</html>
