--- a/uxdesign.html
+++ b/uxdesign.html
@@ -22,6 +22,10 @@
 </header>
 <main>
     <h1>My Work</h1>
+    <ul class="uxskill">
+        <li><img src="./img/uxdesign/1.PNG" alt="Design-1"></li>
+        <li><img src="./img/uxdesign/App Re-design.png" alt="App Re-design"></li>
+    </ul>
 </main>
 
 <footer>
