--- a/webdesign.html
+++ b/webdesign.html
@@ -22,6 +22,12 @@
 </header>
 <main>
     <h1>My Work</h1>
+    <ul class="webskill">
+        <li><img src="./img/webdesign/2.PNG" alt="Work-1"></li>
+        <li><img src="./img/webdesign/1.PNG" alt="work-2"></li>
+        <li><img src="./img/webdesign/3..PNG" alt="work-3"></li>
+    </ul>
+</main>
 </main>
 
 <footer>
