--- a/skills.html
+++ b/skills.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,13 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>MySkills</title>
 </head>
+
 <body>
     <header>
         <nav>
             <ul class="nav-list">
-                <li class="nav-item"><a href="index.html"><img src="/img/logo.png" alt="My logo" class="logoimg"></a></li>
+                <li class="nav-item"><a href="index.html"><img src="/img/logo.png" alt="My logo" class="logoimg"></a>
+                </li>
                 <li class="nav-item"><a href="index.html">Home</a></li>
                 <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
                 <li class="nav-item"><a href="skills.html">My Skills</a></li>
@@ -25,69 +28,67 @@
             <section class="software">
                 <h3>Software Skills</h3>
                 <div>
-                    <img src="" alt="">
+
                     <p>Adobe XD</p>
                 </div>
                 <div>
-                    <img src="" alt="">
+
                     <p>Premiere Pro</p>
-                </div> 
+                </div>
                 <div>
-                    <img src="" alt="">
                     <p>Lightroom</p>
                 </div>
                 <div>
-                    <img src="" alt="">
+
                     <p>Photoshop</p>
                 </div>
                 <div>
-                    <img src="" alt="">
+
                     <p>Illustrator</p>
                 </div>
             </section>
             <section class="programming">
                 <h3>Programming Skills</h3>
-                <div>
-                    <img src="" alt="">
-                    <p>HTML</p>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <p>CSS</p>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <p>C++</p>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <p>C</p>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <p>MySQL</p>
-                </div>
+                    <div>
+                         <p>HTML</p>
+                    </div>
+                    <div>
+
+                        <p>CSS</p>
+                    </div>
+                    <div>
+
+                        <p>C++</p>
+                    </div>
+                    <div>
+
+                        <p>C</p>
+                    </div>
+                    <div>
+
+                        <p>MySQL</p>
+                    </div>
             </section>
             <section class="system">
                 <h3>Software Skills</h3>
                 <div>
-                    <img src="" alt="">
+
                     <p>Windows</p>
                 </div>
                 <div>
-                    <img src="" alt="">
+
                     <p>Linux</p>
                 </div>
                 <div>
-                    <img src="" alt="">
+
                     <p>MacOS</p>
                 </div>
                 <div>
-                    <img src="" alt="">
+
                     <p>Visual Studio Code</p>
                 </div>
                 <div>
-                    <img src="" alt="">
+
                     <p>Illustrator</p>
                 </div>
             </section>
@@ -96,17 +97,19 @@
     <footer>
         <div class="footer">
             <div class="container">
-                    <h5 class="connectme">Connect With Me</h5>
-                    <ul class="social-media">
-                        <li><i class="fab fa-facebook"></i></li>
-                        <li><i class="fab fa-instagram"></i></li>
-                        <li><i class="fab fa-youtube"></i></li>
-                    </ul>
-                </div>
+                <h5 class="connectme">Connect With Me</h5>
+                <ul class="social-media">
+                    <li><i class="fab fa-facebook"></i></li>
+                    <li><i class="fab fa-instagram"></i></li>
+                    <li><i class="fab fa-youtube"></i></li>
+                </ul>
+            </div>
             <div class="container">
-                <ul class="contactme"> 
-                    <li><h5>Contact Me!</h5></li>
-                    <li>    </li>
+                <ul class="contactme">
+                    <li>
+                        <h5>Contact Me!</h5>
+                    </li>
+                    <li> </li>
                     <li>+1 (647) 770 2364</li>
                     <li>contactme@surajsukhiya.com</li>
                 </ul>
@@ -114,7 +117,9 @@
             <div class="container">
                 <div class="footernav">
                     <ul>
-                        <li><h5>Browse</h5></li>
+                        <li>
+                            <h5>Browse</h5>
+                        </li>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="skills.html">My Skills</a></li>
@@ -123,7 +128,8 @@
                 </div>
             </div>
         </div>
-        </footer>
-        <script src="https://kit.fontawesome.com/776bb17f52.js" crossorigin="anonymous"></script>
+    </footer>
+    <script src="https://kit.fontawesome.com/776bb17f52.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
