--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <main>
         <h1>Contact Us</h1>
         <section class="contact">
-            <form method="POST" action="#" class="contact-form">
+            <form method="post" class="contact-form">
                 <div>
                     <label for="fname">Full Name</label>
                     <input type="text" id="fname" name="fname">
