--- a/skills.html
+++ b/skills.html
@@ -70,7 +70,7 @@
                     </div>
             </section>
             <section class="system">
-                <h3>Software Skills</h3>
+                <h3>System Skills</h3>
                 <div>
 
                     <p>Windows</p>
@@ -89,7 +89,7 @@
                 </div>
                 <div>
 
-                    <p>Illustrator</p>
+                    <p>Turbo C++</p>
                 </div>
             </section>
         </section>
