--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
 
-    <title>Portfolio</title>
+    <title>SurajSukhiya</title>
 </head>
 
 <body>
