--- a/photography.html
+++ b/photography.html
@@ -28,10 +28,10 @@
         <li><img src="./img/photography/3.jpg" alt="3"></li>
         <li><img src="./img/photography/4.jpg" alt="4"></li>
         <li><img src="./img/photography/5.JPG" alt="5"></li>
-        <li><img src="./img/photography/6.jpg" alt="6"></li>
+        <li><img src="./img/photography/6.JPG" alt="6"></li>
         <li><img src="./img/photography/7.jpg" alt="7"></li>
         <li><img src="./img/photography/8.jpg" alt="8"></li>
-        <li><img src="./img/photography/9.jpg" alt="9"></li>
+        <li><img src="./img/photography/9.JPG" alt="9"></li>
     </ul>
 
 </main>
