--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     to do studies like every other child but somehow, I was always fascinated about Technology around
                     me, always
                     like to try
-                    out tings and do experiments and learn about them so Computers Became my Primary source of
+                    out things and do experiments and learn about them so Computers Became my Primary source of
                     Entertainment and
                     Focus for rest of my life. Apart from This Since Childhood I Started knowing the things about after
                     life and
