--- a/contact.html
+++ b/contact.html
@@ -68,6 +68,7 @@
                     </ul>
                 </div>
             </div>
+            <p class="copyright">Copyright © 2021 by Suraj Sukhiya</p>
         </div>
         </footer>
         <script src="https://kit.fontawesome.com/776bb17f52.js" crossorigin="anonymous"></script>
