--- a/photography.html
+++ b/photography.html
@@ -65,6 +65,7 @@
                 </ul>
             </div>
         </div>
+        <p class="copyright">Copyright © 2021 by Suraj Sukhiya</p>
     </div>
     </footer>
     <script src="https://kit.fontawesome.com/776bb17f52.js" crossorigin="anonymous"></script>
