contact page no error

--- a/contact.html
+++ b/contact.html
@@ -29,11 +29,11 @@
                 </div>
                 <div>
                     <label for="mnumber">Mobile Number</label>
-                    <input type="number" id="mnumber" name="mnumber">
+                    <input type="number" id="mnumber" name="mnO">
                 </div>
                 <div>
-                    <label for="message">Message</label>
-                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                    <label for="Message">Message</label>
+                    <textarea name="MessageUSER" id="Message" cols="30" rows="10"></textarea>
                 </div>
                 <button type="submit">Send Message</button>
             </form>
