no error with portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="row mx-3">
                 <div class="port-item col-12 my-5 col-md-6 col-lg-6">
-                    <a href="./photography.html"><img object-fit:cover; src="/img/photoimg.jpg" alt="Photography"></a>
+                    <a href="./photography.html"><img src="/img/photoimg.jpg" alt="Photography"></a>
                     <a href="./photography.html"><h2 class="bg-info text-center py-3 text-white bold">Photography</h2></a>
                 </div>
                 <div class="port-item col-12 my-5 col-md-6 col-lg-6">
