social media link connected

--- a/photography.html
+++ b/photography.html
@@ -39,13 +39,13 @@
 <footer>
     <div class="footer">
         <div class="container">
-                <h5 class="connectme">Connect With Me</h5>
-                <ul class="social-media">
-                    <li><i class="fab fa-facebook"></i></li>
-                    <li><i class="fab fa-instagram"></i></li>
-                    <li><i class="fab fa-youtube"></i></li>
-                </ul>
-            </div>
+            <h5 class="connectme">Connect With Me</h5>
+            <ul class="social-media">
+                <li><a href="https://www.facebook.com/suraj.sukhiya/about"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com/suraj.sukhiya/?hl=en"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UCDKs2Bf6vMg2aTr1ygi3fZA"><i class="fab fa-youtube"></i></a></li>
+            </ul>
+        </div>
         <div class="container">
             <ul class="contactme"> 
                 <li><h5>Contact Me!</h5></li>
