--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <H1>CHEVKING</H1>        <nav>
+        <nav>
             <ul class="nav-list">
                 <li class="nav-item"><a href="index.html"><img src="/img/logo.png" alt="My logo" class="logoimg"></a></li>
                 <li class="nav-item"><a href="index.html">Home</a></li>
